adding vm params to docs link